--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/websockets": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "reflect-metadata": "^0.1.13",
@@ -25,13 +26,14 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.27",
     "prisma": "^5.22.0",
-    "ts-node": "^10.9.2",
+    "ts-node": "^1.7.1",
     "typescript": "^5.9.3"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "node prisma/seed.js"
   },
   "description": "",
   "main": "index.js",
