--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
+    "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
     "socket.io-client": "^4.6.0",
     "uuid": "^9.0.1",
